Added BCD functions and change ADC opcdes to use them. Implemented SBC opcode.

--- a/src/core/tests/CMakeLists.txt
+++ b/src/core/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ target_link_libraries(gtest Threads::Threads)
 
 set(TEST_SRC
     AddressModeTest.cpp
+    BcdTest.cpp
     CpuTest.cpp
     main.cpp
 )
