Added string fmt function because stringstream is way too tedious working with hex values.

--- a/src/core/tests/CpuTest/CMakeLists.txt
+++ b/src/core/tests/CpuTest/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(CpuTest
     CpuTest.cpp
     ../../Cpu.cpp
     ../../Logger.cpp
+    ../../Utils.cpp
     mock/Memory.cpp
     mock/Timer.cpp
 )
