--- a/src/ui/debugger/CMakeLists.txt
+++ b/src/ui/debugger/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(zlsnes_ui
     ${CMAKE_CURRENT_SOURCE_DIR}/AddressDialog.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/DebuggerWindow.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/DisassemblyModel.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/IoRegisterModel.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/MemoryModel.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Opcode.cpp
 )
