Copied keybinding gui stuff from zlgb. Start of Input class.

--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -17,9 +17,11 @@ include_directories(../)
 
 set(UI_SRC
     InfoWindow.cpp
+    KeyBindingDialog.cpp
     LogWindow.cpp
     MainWindow.cpp
     SettingsConstants.cpp
+    SettingsDialog.cpp
 )
 
 add_library(zlsnes_ui
