Added checks for infinite loops, and exceptions when running unit tests.

--- a/src/core/tests/CpuTest/CMakeLists.txt
+++ b/src/core/tests/CpuTest/CMakeLists.txt
@@ -24,3 +24,5 @@ target_link_libraries(CpuTest
 
 add_test(NAME CpuTest COMMAND CpuTest)
 set_property(TEST CpuTest PROPERTY WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
+
+add_compile_definitions("TESTING")
