Implemented WAI intruction and VBlank interrupt.

--- a/src/core/tests/CpuTest/CMakeLists.txt
+++ b/src/core/tests/CpuTest/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(Qt5 REQUIRED COMPONENTS Core)
 add_executable(CpuTest
     CpuTest.cpp
     ../../Cpu.cpp
+    ../../Interrupt.cpp
     ../../Logger.cpp
     ../../Utils.cpp
     mock/Memory.cpp
