--- a/src/core/tests/CMakeLists.txt
+++ b/src/core/tests/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(AddressModeTest)
 add_subdirectory(CpuTest)
 add_subdirectory(MemoryTest)
 add_subdirectory(PpuTest)
+add_subdirectory(TimerTest)
