Added cartridge sram. Moved rom address mapping code into Cartridge.

--- a/src/core/tests/MemoryTest/CMakeLists.txt
+++ b/src/core/tests/MemoryTest/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(Qt5 REQUIRED COMPONENTS Core)
 
 add_executable(MemoryTest
     MemoryTest.cpp
+    ../../Cartridge.cpp
     ../../Logger.cpp
     ../../Memory.cpp
     ../../Utils.cpp
