Reworked Dma class to make HDMA easier. Dma class now has a pointer to the entire 0x4300 block of memory, but doesnt request ownership, since it doesnt care when reads or writes happen.

--- a/src/core/tests/DmaTest/CMakeLists.txt
+++ b/src/core/tests/DmaTest/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(DmaTest
     ../../Logger.cpp
     ../../Utils.cpp
     mock/Memory.cpp
+    mock/Timer.cpp
 )
 
 target_link_libraries(DmaTest
