Added Spc700 cpu. No timing or memory mapped registers yet.

--- a/src/core/tests/CMakeLists.txt
+++ b/src/core/tests/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(DmaTest)
 add_subdirectory(MemoryTest)
 add_subdirectory(PpuTest)
 add_subdirectory(TimerTest)
+add_subdirectory(Spc700Test)
