Roughly hack in running the SPC. No communication yet.

--- a/src/core/Audio/CMakeLists.txt
+++ b/src/core/Audio/CMakeLists.txt
@@ -2,4 +2,5 @@ target_sources(zlsnes_core
     PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/Memory.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Spc700.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Timer.cpp
 )
