Moved common mock classes out of individual test cases into CommonMocks directory

--- a/src/core/tests/AddressModeTest/CMakeLists.txt
+++ b/src/core/tests/AddressModeTest/CMakeLists.txt
@@ -14,8 +14,8 @@ add_executable(AddressModeTest
     ../../Interrupt.cpp
     ../../Logger.cpp
     ../../Utils.cpp
-    mock/Memory.cpp
-    mock/Timer.cpp
+    ../CommonMocks/Memory.cpp
+    ../CommonMocks/Timer.cpp
 )
 
 target_link_libraries(AddressModeTest
